[tool.poetry]
name = "image_processing_100_knock"
version = "0.1.0"
description = ""
authors = ["Yuki Wada <yuki.w.228285@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
ipython = "^7.19.0"
ipykernel = "^5.4.3"
numpy = "^1.19.5"
opencv-python = "^4.5.1"
matplotlib = "^3.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
