[tool.poetry]
name = "nlp_100_knock"
version = "0.1.0"
description = ""
authors = ["Yuki Wada <yuki.w.228285@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ipython = "^7.18.1"
ipykernel = "^5.3.4"
requests = "^2.25.1"
numpy = "^1.19.5"
pandas = "^1.2.1"
matplotlib = "^3.3.4"
regex = "^2020.11.13"
networkx = "^2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
